--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: namer_app
+name: buhuiwangshi
 description: A new Flutter project.
 
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
@@ -12,12 +12,17 @@ dependencies:
   flutter:
     sdk: flutter
   custom_navigation_bar: ^0.8.2
+  easy_date_timeline: ^1.1.3
+  flutter_smart_dialog: ^4.9.8+1
+  jiffy: ^6.3.1
+  provider: ^6.1.2
+  animations: ^2.0.11
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_lints: ^2.0.0
+  flutter_lints: ^4.0.0
 
 flutter:
   uses-material-design: true
