--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,11 +12,11 @@ dependencies:
   flutter:
     sdk: flutter
   custom_navigation_bar: ^0.8.2
-  easy_date_timeline: ^1.1.3
-  flutter_smart_dialog: ^4.9.8+1
   jiffy: ^6.3.1
   provider: ^6.1.2
-  animations: ^2.0.11
+  day_night_time_picker: ^1.3.1
+  easy_date_timeline: ^1.1.3
+  flutter_smart_dialog: ^4.9.8+1
 
 dev_dependencies:
   flutter_test:
