--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   day_night_time_picker: ^1.3.1
   easy_date_timeline: ^1.1.3
   flutter_smart_dialog: ^4.9.8+1
+  animated_toggle_switch: ^0.8.3
 
 dev_dependencies:
   flutter_test:
