--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,13 +11,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  animated_toggle_switch: ^0.8.3
   custom_navigation_bar: ^0.8.2
-  jiffy: ^6.3.1
-  provider: ^6.1.2
   day_night_time_picker: ^1.3.1
   easy_date_timeline: ^1.1.3
   flutter_smart_dialog: ^4.9.8+1
-  animated_toggle_switch: ^0.8.3
+  flutter_material_color_picker: ^1.2.0
+  provider: ^6.1.2
+  jiffy: ^6.3.1
 
 dev_dependencies:
   flutter_test:
