--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  animations: ^2.0.11
   animated_toggle_switch: ^0.8.3
   custom_navigation_bar: ^0.8.2
   day_night_time_picker: ^1.3.1
