--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,9 @@ dependencies:
   flutter_material_color_picker: ^1.2.0
   provider: ^6.1.2
   jiffy: ^6.3.1
+  sqflite: ^2.3.3+1
+  path: ^1.9.0
+  uuid: ^4.5.0
 
 dev_dependencies:
   flutter_test:
