--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,8 +19,9 @@ jobs:
           java-version: "11"
       - uses: subosito/flutter-action@v2
         with:
-          flutter-version: "3.10.0"
+          flutter-version: "stable"
           channel: "stable"
+      - run: flutter --version
       - run: flutter pub get
       - run: flutter test
       - run: flutter build apk
