--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,8 +22,8 @@ jobs:
           flutter-version: "3.24.2" # 指定最新的稳定版本
           channel: "stable"
       - run: flutter pub get
-      - run: flutter build apk
-      - run: flutter build ios --release --no-codesign
+      - run: flutter build apk --release --no-tree-shake-icons
+      # - run: flutter build ios --release --no-codesign
 
       - name: Push to Releases
         uses: ncipollo/release-action@v1
