--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   path: ^1.9.0
   uuid: ^4.5.0
   fl_chart: ^0.69.0
+  haptic_feedback: ^0.5.1+1
+  confetti: ^0.7.0
 
 dev_dependencies:
   flutter_test:
