--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,13 +7,13 @@ on:
 jobs:
   build:
     name: Build And Release
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-java@v3
         with:
           distribution: "zulu"
-          java-version: "16"
+          java-version: "17"
       - uses: subosito/flutter-action@v2
         with:
           flutter-version: "3.24.2" # 指定最新的稳定版本
@@ -28,15 +28,6 @@ jobs:
           artifacts: "build/app/outputs/apk/release/*,build/ios/iphoneos/app.ipa"
           tag: v1.0.${{ github.run_number }}
           token: ${{ secrets.TOKEN }}
-
-      # 可选：上传到 App Store Connect
-      # - name: Upload iOS app to App Store Connect
-      #   uses: apple-actions/upload-app-store-connect@v1
-      #   with:
-      #     app-path: build/ios/iphoneos/app.ipa
-      #     issuer-id: ${{ secrets.APPSTORE_ISSUER_ID }}
-      #     api-key-id: ${{ secrets.APPSTORE_API_KEY_ID }}
-      #     api-private-key: ${{ secrets.APPSTORE_API_PRIVATE_KEY }}
 
       # 可选：上传到 Google Play
       # - name: Upload Android Release to Play Store
