底部输入框建设

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   confetti: ^0.7.0
   dart_openai: ^5.1.0
   flutter_dotenv: ^5.1.0
+  speech_to_text: ^7.0.0
 
 dev_dependencies:
   flutter_test:
