--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,9 +24,11 @@ dependencies:
   uuid: ^4.5.0
   fl_chart: ^0.69.0
   confetti: ^0.7.0
-  dart_openai: ^5.1.0
   flutter_dotenv: ^5.1.0
   speech_to_text: ^7.0.0
+  flutter_local_notifications: ^17.2.3
+  timezone: ^0.9.4
+  permission_handler: ^11.3.1
 
 dev_dependencies:
   flutter_test:
